--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,8 @@
 
         <activity
             android:name=".DialogActivity"
-            android:theme="@android:style/Theme.Holo.Light.Dialog"
+            android:theme="@style/AppTheme.NoActionBar"
             android:excludeFromRecents="true"
-            android:launchMode="singleInstance"
             >
         </activity>
 
