--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <!--
@@ -40,7 +40,7 @@
         </receiver>
 
         <activity
-            android:name=".DialogActivity"
+            android:name=".activity.DialogActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
@@ -48,7 +48,7 @@
         </activity>
 
         <activity
-            android:name=".ErrorActivity"
+            android:name=".activity.ErrorActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
