--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.google.firebase:firebase-ads:9.0.2'
 
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
